// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectItem component should render correctly 1`] = `
<div
  aria-label="sidebar-project-undefined"
  className="css-view-g5y9jx"
  dir={null}
  id="sidebar-project--LcRVRo6mhbC0oXCcZ2F-0"
>
  <div
    className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73"
    dir={null}
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "transitionDuration": "0s",
      }
    }
    tabIndex="0"
  >
    <div
      className="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-height-1mwlp6a r-justifyContent-1wtj0ep r-paddingLeft-1937ghh"
      dir={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(245,245,245,1.00)",
        }
      }
    >
      <div
        className="css-view-g5y9jx r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz"
        dir={null}
      >
        <div
          className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-18c69zk r-height-18yzcnr r-justifyContent-1777fci r-marginRight-zso239 r-width-yc9v9c"
          dir={null}
          style={
            Object {
              "backgroundColor": "rgba(71,163,255,1.00)",
              "opacity": 0.4,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectItem component should render correctly when it is the selected project 1`] = `
<div
  aria-label="sidebar-project-undefined"
  className="css-view-g5y9jx"
  dir={null}
  id="sidebar-project--LcRVRo6mhbC0oXCcZ2F-0"
>
  <div
    className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73"
    dir={null}
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "transitionDuration": "0s",
      }
    }
    tabIndex="0"
  >
    <div
      className="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-height-1mwlp6a r-justifyContent-1wtj0ep r-paddingLeft-1937ghh"
      dir={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(214,235,255,1.00)",
        }
      }
    >
      <div
        className="css-view-g5y9jx r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz"
        dir={null}
      >
        <div
          className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-18c69zk r-height-18yzcnr r-justifyContent-1777fci r-marginRight-zso239 r-width-yc9v9c"
          dir={null}
          style={
            Object {
              "backgroundColor": "rgba(71,163,255,1.00)",
              "opacity": 1,
            }
          }
        />
      </div>
    </div>
  </div>
  <ProjectSectionList
    projectData={
      Object {
        "color": "#39CCCC",
        "id": "-LcRVRo6mhbC0oXCcZ2F",
        "index": 0,
        "name": "Another one",
        "userIds": Array [
          "UUKU61Jc7ET8zE5ncN8F61HE19y1",
        ],
      }
    }
  />
</div>
`;
